# ace-plays-game

./: .gitignore  CMakeLists.txt  Doxyfile  LICENCE  LICENSCE.txt  README.md
.github/ISSUE_TEMPLATE/: epic.md  stories.md  tasks.md
LCCV/: CMakeLists.txt
LCCV/include/: lccv.hpp
LCCV/src/: lccv.cpp
cardDetection/: cardDetection.cpp
diagrams/: System Overview Diagram.drawio  state_diagram.drawio
docs/: CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  CallbackLinker_8h.html  CallbackLinker_8h__dep__incl.map  CallbackLinker_8h__dep__incl.md5  CallbackLinker_8h__incl.map  CallbackLinker_8h__incl.md5  CallbackLinker_8h_source.html  CameraTest_8cpp.html  CameraTest_8cpp__incl.map  CameraTest_8cpp__incl.md5  Camera_8cpp.html  Camera_8cpp__incl.map  Camera_8cpp__incl.md5  Camera_8h.html  Camera_8h__dep__incl.map  Camera_8h__dep__incl.md5  Camera_8h__incl.map  Camera_8h__incl.md5  Camera_8h_source.html  CardDiscriminatorTest_8cpp.html  CardDiscriminatorTest_8cpp__incl.map  CardDiscriminatorTest_8cpp__incl.md5  CardDiscriminator_8cpp.html  CardDiscriminator_8cpp__incl.map  CardDiscriminator_8cpp__incl.md5  CardDiscriminator_8h.html  CardDiscriminator_8h__dep__incl.map  CardDiscriminator_8h__dep__incl.md5  CardDiscriminator_8h__incl.map  CardDiscriminator_8h__incl.md5  CardDiscriminator_8h_source.html  Card_8h.html  Card_8h__dep__incl.map  Card_8h__dep__incl.md5  Card_8h__incl.map  Card_8h__incl.md5  Card_8h_source.html  DetectCardTest_8cpp.html  DetectCardTest_8cpp__incl.map  (+295 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  (+71 more)
html/: StrategyEngine_8h_source.html  classCallbackLinker__inherit__graph.map  classCardDiscriminator-members.html  classCardDiscriminator.html  classMetadata.html  classOptions-members.html  classStrategyEngine-members.html  classStrategyEngine.html  classlccv_1_1PiCamera.html  classlccv_1_1PiCamera__coll__graph.md5  graph_legend.html  index.html  inherit_graph_13.md5  inherit_graph_14.md5  inherit_graph_4.md5  inherit_graph_5.md5  inherits.html  structAcePlaysUtils.html  structAcePlaysUtils__coll__graph.map  structCompletedRequest.html  structCompletedRequest__coll__graph.md5  structFrameInfo.html  structTemplateImages.html
html/search/: all_10.js  all_4.js  classes_4.js  classes_5.js  functions_5.js  functions_6.js  searchdata.js
include/: CallbackLinker.h  Camera.h  Card.h  CardDiscriminator.h  DetectCard.h  GamePlay.h  Leds.h  StrategyEngine.h  ToggleLED.h  camera.h  detect_card.h  leds.h  strategy.h  strategy_interface.h
latex/: annotated.tex  classCallbackLinker.tex  classCallbackLinker__inherit__graph.md5  classCamera.tex  classCardDiscriminator.tex  classCardTemplate.tex  classDetectCard.tex  classDetectCard__inherit__graph.md5  classGamePlay.tex  classGamePlay__coll__graph.md5  classLibcameraApp.tex  classMetadata.tex  classOptions.tex  classStrategyEngine.tex  classToggleLED.tex  classlccv_1_1PiCamera.tex  classlccv_1_1PiCamera__coll__graph.md5  hierarchy.tex  md_README.tex  refman.tex  structAcePlaysUtils.tex  structAcePlaysUtils__coll__graph.md5  structCard__params.tex  structCompletedRequest.tex  structCompletedRequest__coll__graph.md5  structFrameInfo.tex  structLibcameraApp_1_1Msg.tex  structTemplateImages.tex  structqCard.tex
src/: Camera.cpp  CardDiscriminator.cpp  DetectCard.cpp  GamePlay.cpp  Leds.cpp  StrategyEngine.cpp  ToggleLED.cpp  camera.cpp  detect_card.cpp  leds.cpp  main.cpp  mainpage.h  strategy_engine.cpp
tests/: CMakeLists.txt  CameraTest.cpp  CardDiscriminatorTest.cpp  DetectCardTest.cpp  GamePlayTest.cpp  LedsTest.cpp  StrategyEngineTest.cpp  StrategyEngine_test.cpp  ToggleLEDTest.cpp  main.cpp
